[package]
name = "tabular"
version = "0.1.5-alpha.0"
authors = ["Jesse A. Tov <jesse.tov@gmail.com>"]
description = "Plain text tables, aligned automatically"
repository = "https://github.com/tov/tabular-rs"
readme = "README.md"
license = "MIT/Apache-2.0"
keywords = ["tables", "formatting", "alignment", "text", "cli"]
categories = ["value-formatting"]
edition = "2018"

[features]
default = ["unicode-width"]

[dependencies]
strip-ansi-escapes = "0.1.0"
unicode-width = { version = "0.1.5", optional = true }

[dev-dependencies]
colored = "2.0.0"
