[package]
name = "tabular"
version = "0.1.5-alpha.0"
authors = ["Jesse A. Tov <jesse.tov@gmail.com>"]
description = "Plain text tables, aligned automatically"
repository = "https://github.com/tabular-rs/tabular-rs"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["tables", "formatting", "alignment", "text", "cli"]
categories = ["value-formatting"]
edition = "2018"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]

[features]
default = ["unicode-width"]
ansi-cell = ["strip-ansi-escapes"]

[dependencies]
strip-ansi-escapes = { version = "0.1.1", optional = true }
unicode-width = { version = "0.1.5", optional = true }

[dev-dependencies]
colored = "2.0.0"
